--- a/manual/alerts/email-alert-api-unprocessed-work.html
+++ b/manual/alerts/email-alert-api-unprocessed-work.html
@@ -160,6 +160,13 @@
     </div>
 
      <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
+    <div class="govuk-warning-text">
+      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+      <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">Warning</span>
+        This document has not been updated for a while now. It may be out of date.
+      </strong>
+    </div>
 
   Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/25684f12f1578f68b8a9c0bf2eed5a142ad9e820">6 Oct 2020</a>
 </div>
