--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--35">TURKS AND CAICOS POST CABINET MEETING STATEMENT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/255674.es-419">La ayuda del Reino Unido llega a iraquíes desplazados a lo largo del norte de Irak</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-statement-on-iraq-human-rights-council-28th-session-geneva">UK Statement on Iraq, Human Rights Council, 28th session, Geneva</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/royal-baby-pm-statement">Royal baby: PM statement</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/230636.ja">英国外務省の年次人権報告書で日本の死刑制度を解説</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/296916.pt">MAGNA CARTA</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/consular-enquiries-for-europe">Consular enquiries for Europe</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/celebrating-three-great-english-exports-in-2015--6">Celebrating three GREAT English exports in 2015</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/197155.pl">ARUP świętuje 15-lecie działalności w Polsce</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/225644.es">La UE y EE.UU avanzan hacia un acuerdo de libre comercio que busca impulsar las exportaciones de las PYMES y el empleo</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/294447.pt">Inovações Britânicas na área da saúde na Hospitalar 2015</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/consular-notice-about-demonstrations-in-kuwait--3">Consular notice about demonstrations in Kuwait</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-update--7">Turks and Caicos post Cabinet Update</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/238913.pt">Conferência sobre Eficiência Energética em Manaus</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-supports-food-needs-of-vulnerable-afghans">UK supports food needs of vulnerable Afghans</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/international-human-rights-day--3">International Human Rights Day</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
